Fixed Questions Spacing

--- a/src/styles/LoyaltyProgram.css
+++ b/src/styles/LoyaltyProgram.css
@@ -121,3 +121,8 @@
   margin-bottom: 16px;
   margin-right: 96px;
 }
+
+.question-container {
+  width: 1248px;
+  margin-left: 96px;
+}
